command overflow and fixes

--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: cursor, monospace;
 }
 
-.commandLine {
+#terminal {
+    position: fixed;
+    overflow: auto;
+    margin: 0 auto;
+    max-height: 90vh;
+    width: 190vw;
+}
+#commandLine {
     display: flex;
   }
 
-.commandLine input[type="text"] {
+#commandLine input[type="text"] {
     flex: 1;
     margin-left: 5px;
   }
